<resources>
    <string name="app_name">Survay</string>

    <string name="hello">Hello</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="connect">connect</string>
    <string name="welcome">Welcome</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="submit">submit</string>
    <string name="error_empty_field">Please, fill in the field!</string>
    <string name="error_confirm_password">Password mismatch</string>
    <string name="error_login_exist">This login already exists</string>
    <string name="error_short_password">Password must be longer than 8 characters</string>
    <string name="error_regex_password">Password must contain letters and numbers</string>
    <string name="error_login_or_password">Login not found or password is incorrect</string>
    <string name="role_admin">Administrator</string>
    <string name="role_manager">Manager</string>
    <string name="role_user">User</string>
    <string name="role_other">Other</string>
    <string name="register">Register</string>
    <string name="test_run">Test run</string>
    <string name="logout">logout</string>
    <string name="roles_setting">roles setting</string>
    <string name="logout_question">Are you sure you want to logout?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
</resources>